--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,26 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.boddy {
+    margin: 10px 578px;
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.display {
+    display: flex;
+    justify-content: center;
+    float: left;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.tablelist {
+    margin: auto;
+    display: block;
+}
+
+.btn-number1 {
+    width: 2rem;
+    height: 2rem;
+    padding: 0;
+    background: #5c281d;
+    border-color: #5c281d;
 }
